gifs populate/pause/unpause, fixing spacing and population reset when adding more buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,12 @@
     margin-right: 5px;
 }
 .buttons{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    text-align: center;
 }
 .jumbotron{
     text-align: center;
+}
+.divs{
+    float: left;
 }
